# RUSTChat

./: .gitignore  Cargo.toml  README.md  nouveau.txt
src/chat/client/: Cargo.toml
src/chat/client/src/: main.rs
src/chat/server/: Cargo.toml  account.txt
src/chat/server/src/: main.rs
