[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.10.3"
aead = "0.4.3"
block-modes = "0.8.1"
gost-modes = "0.5.0"
aes = "0.7.5"
hex-literal = "0.3.4"
str = "0.1.4"
hex = "0.4.3"
magic-crypt = "3.1.9"